# Project_Aesop

./: .env  .gitignore  README.md  external_requirements.txt  install.sh  main.py  pyproject.toml  requirements.txt
appdata/: cookies.pkl  vidgen_assistant_prompt.txt  visla_root_prompt.txt
appdata/messages/: missing_client_secret_msg.txt
appdata/output/SpaceSecrets/: Hubble's_Last_Gyro__The_Telescope's_Fight_for_Survival!
appdata/prompts/: gpt_videogen_prompt.txt  visla_root_prompt.txt
appdata/templates/: channels_template.json  google_secret_template.json  gpt_auth_template.json
common/: browser.py  chatgpt.py  content_editor.py  content_helper.py  elevenlabs.py  reddit.py  visla.py  youtube.py
data/build_config/: build_config.json  dependencies.csv  service_config.json  user_config.json
data/config/: build_config.json  dependencies.csv  service_config.json  user_config.json
data/dynamic/: elevenlabs_voices.json
dev_utilities/: purge_file_from_git.sh
docs/: CONTRIBUTING.md
install/: aesop  build_app_environment.sh  build_file_structure.sh  build_fs.sh  build_fs_fmt.sh  build_project_folders.sh  build_venv.sh  colors.lib  common.lib  data  dependencies.csv  filepaths.lib  install_dependencies.sh  output  print.lib  printlog.lib  setup.sh  uninstall.sh
src/: main.py
src/application/services/: chatgpt_service.py
src/domain/: enumerations.py
src/models/: chatgpt.py
src/oprhaned/: browser.py
templates/secrets/: reddit_auth_template.json
tests/: test_chatgpt_client.py  test_email.py  test_google_account.py
utilities/: purge_file_from_git.sh
(+52 files in other folders)
